TestRepo2/src/objects/Recipe_Generic_Ingredient__c.object
<CustomObject>
    <description>Object to store all of the disparate data that can be a single ingredient.</description>
    <fields>
        <fullName>Custom_Ingredient__c</fullName>
        <label>Custom Ingredient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Modifier__c</fullName>
        <label>Custom Modifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Quantity__c</fullName>
        <label>Custom Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Unit__c</fullName>
        <label>Custom Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Featured_Brand__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Featured Brand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <picklist>
            <picklistValues>
                <fullName>.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recipe_Attribute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipe Attribute</label>
        <referenceTo>Recipe_Attribute__c</referenceTo>
        <relationshipLabel>Recipe Generic Ingredients</relationshipLabel>
        <relationshipName>Recipe_Generic_Ingredients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recipe_Diageo_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipe Diageo Product</label>
        <referenceTo>Diageo_Product__c</referenceTo>
        <relationshipLabel>Recipe Generic Ingredients</relationshipLabel>
        <relationshipName>Recipe_Generic_Ingredients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recipe_Modifiers__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipe Modifiers</label>
        <referenceTo>Recipe_Modifier__c</referenceTo>
        <relationshipLabel>Recipe Generic Ingredients</relationshipLabel>
        <relationshipName>Recipe_Generic_Ingredients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recipe_Non_Diageo_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipe Non-Diageo Product</label>
        <referenceTo>Recipe_Non_Diageo_Product__c</referenceTo>
        <relationshipLabel>Recipe Generic Ingredients</relationshipLabel>
        <relationshipName>Recipe_Generic_Ingredients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recipe__c</fullName>
        <label>Recipe</label>
        <referenceTo>Recipe__c</referenceTo>
        <relationshipLabel>Recipe Generic Ingredients</relationshipLabel>
        <relationshipName>Recipe_Generic_Ingredients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <picklist>
            <picklistValues>
                <fullName>oz.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ml.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>tsp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Recipe Generic Ingredient</label>
    <nameField>
        <label>Recipe Generic Ingredient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recipe Generic Ingredients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>